# cmake_qt

./: .gitignore  .rsync-filter  CMakeLists.txt  README  settings.xml  version.hpp
src/: 365x1.xpm  366x1.xpm  BackGround_365.xcf  BackGround_366.xcf  cl_parametrs.cpp  cl_parametrs.hpp  dialogEditData.cpp  dialogEditData.hpp  dialog_conditions.cpp  dialog_conditions.hpp  dialog_edit_file.cpp  dialog_edit_file.hpp  dialog_holiday.cpp  dialog_holiday.hpp  dialog_units.cpp  dialog_units.hpp  functions.cpp  functions.hpp  graphic_widget.cpp  graphic_widget.hpp  holiday_delegate.cpp  holiday_delegate.hpp  holiday_list_model.cpp  holiday_list_model.hpp  holiday_table_model.cpp  holiday_table_model.hpp  holiday_view.cpp  holiday_view.hpp  holidays.xml  main.cpp  main_window.cpp  main_window.hpp  modelMembersGroup.cpp  modelMembersGroup.hpp  modelUnits.cpp  modelUnits.hpp  my_list_view.cpp  my_list_view.hpp  person_list_model.cpp  person_list_model.hpp  (+12 more)
tests/: CMakeLists.txt  date_tests  settings.xml
tests/src/: date_test.cpp  day_number.cpp  test_personmodel.cpp  version.hpp  xml_test.cpp
